# yolov1-pytorch

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
scripts/: ablation.py  benchmark.py  detect.py  error_analysis.py  generate_docs.py  hparam_search.py  iou_sensitivity.py  train.py
tests/: test_api.py  test_augmentations.py  test_data.py  test_map.py  test_model.py  test_nms.py  test_nms_cuda.py  test_trainer.py  test_trainer_dataloaders.py  test_voc_dataset.py
yolov1/: __init__.py
yolov1/data/: __init__.py  augmentations.py  voc_dataset.py
yolov1/engine/: __init__.py  trainer.py
yolov1/eval/: __init__.py  iou.py  map.py  nms.py  nms_cuda.py
yolov1/model/: __init__.py  backbone.py  head.py  loss.py  yolov1.py
yolov1/serve/: api.py
